fix(pikaday): tg-1269 upgrade pickaday and increase z-index

--- a/app/styles/core/elements.scss
+++ b/app/styles/core/elements.scss
@@ -53,7 +53,7 @@ svg {
     // scss-lint:disable ImportantRule
     min-width: 240px;
     width: auto;
-    z-index: $third-layer;
+    z-index: $overall-layer;
     .pika-title {
         color: $grayer;
     }
